# dreamer4

./: .gitignore  README.md  dataset_gym_rollouts.py  dataset_moving_mnist.py  gym_pixel_env.py  pyproject.toml  test_toy_action_bc.py  train_cartpole.py  train_cartpole_transformer_ppo.py  train_cartpole_with_dynamics_rl.py  train_gym_rl.py  train_gym_tokenizer.py  train_halfcheetah_imagination_rl.py  train_moving_mnist_dynamics.py  train_moving_mnist_tokenizer.py  train_snake_ppo.py
dreamer4/: __init__.py  attention.py  cli.py  dreamer4.py  embeddings.py  encodings.py  env.py  experience.py  layers.py  losses.py  mocks.py  tokenizer.py  trainers.py  transformers.py  utils.py  world_model.py
dreamer4/web_env/: __init__.py  env.py  index.html  inspect_index.html  inspect_server.py  server.py
tests/: test_dreamer.py  test_e2e.py  test_env_wrapper.py
