[project]
name = "dreamer4"
version = "0.6.28"
description = "Dreamer 4"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.10"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'transformer',
    'attention mechanism',
    'model-based reinforcement learning',
    'world models'
]

classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "accelerate",
    "adam-atan2-pytorch>=0.2.2",
    "assoc-scan",
    "discrete-continuous-embed-readout>=0.2.1",
    "einx>=0.3.0",
    "einops>=0.8.1",
    "ema-pytorch",
    "hl-gauss-pytorch",
    "moviepy==1.0.3",
    "PoPE_pytorch>=0.1.1",
    "torch>=2.4",
    "torch_einops_utils>=0.0.20",
    "torchvision",
    "tqdm",
    "x-mlps-pytorch>=0.3.1",
    "vit-pytorch>=1.15.3",
]

[project.urls]
Homepage = "https://pypi.org/project/dreamer4/"
Repository = "https://github.com/lucidrains/dreamer4"

[project.optional-dependencies]
examples = []
test = [
    "pytest",
    "pytest-shard"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.build]
ignore-vcs = true
include = [
    "/dreamer4",
    "/README.md",
    "/LICENSE",
]
exclude = [
    "/tests",
    "*.sh",
    "*.png",
]

[tool.hatch.build.targets.wheel]
packages = ["dreamer4"]
